--- a/src/components/button/index.module.css
+++ b/src/components/button/index.module.css
@@ -3,9 +3,9 @@
     height: 3rem;
     width: 10em;
     color: white;
-    font-size: 1.1rem;
+    font-size: 20px;
     border-radius: 25px;
     margin: 1rem;
-    font-family: 'Poppins';
+    font-family: 'Poppins', Helvetica, sans-serif;
     font-weight: 900;
 }
