--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -2,16 +2,24 @@
     display: flex;
     flex-direction: row;
     height: 3rem;
+    color: white;
     background-color: rgb(73, 182, 0); 
 }
 
 .normalText{
     display: flex;
-    font-family: 'Poppins';
-    margin: 1rem;
+    justify-content: center;
+    font-family: 'Poppins', Helvetica, sans-serif;
+    margin: 0.3rem;
+    font-weight: lighter;
+    font-size: x-large;
 }
 
 .bolderText{
     display: flex;
-    font-weight: bold;
+    margin: 0.3rem;
+    justify-content: center;
+    font-family: 'Poppins', Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: x-large;
 }
