--- a/src/components/card/index.module.css
+++ b/src/components/card/index.module.css
@@ -7,3 +7,8 @@
     box-shadow: 10px 10px grey;
     background-color: rgb(218, 218, 218);
 }
+
+.img{
+    align-self: center;
+    margin-top:1rem;
+}
